Page Jump solved, Loader added

--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,33 @@ body{
 	background: rgba(0,0,0,0);
 }
 
+.foot{
+	display: flex;
+	justify-content:  center;
+	padding: 2% 0 3% 0;
+}
+
+.loader{
+	border: 6px solid rgba(0,0,0,0.15);
+  border-radius: 50%;
+  border-top: 6px solid #00e676;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 1s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+}
+  
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+}
+
 
 @media only screen and (min-width: 993px){
 	.container{
